# Onboarding-Archeologist---Openclaw-

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  analyze_payload.json  docker-compose.prod.yml  docker-compose.yml  setup.sh
.openclaw/.openclaw/tui/: last-session.json
backend/: Dockerfile  __init__.py  pyproject.toml  requirements.txt  setup.py  test-agents.ps1
backend/app/: config.py  database.py  main.py  schemas.py  telegram_bot.py  telegram_integration.py
backend/app/agents/: base.py  evidence_agents.py  feedback.py  memory.py  orchestrator.py
backend/app/middleware/: error_handler.py  logging.py
backend/app/models/: analysis.py
backend/app/services/: agent_pool.py  agent_services.py  analyzer.py  cache.py  decision_engine.py  ghost_code_analyzer.py  github_client.py  llm_analyzer.py  onboarding_journey_generator.py  openclaw_formatter.py  oracle.py  report_formatter.py  scar_tissue_detector.py  tribal_knowledge_extractor.py
backend/data/: archaeologist.db
backend/tests/: test_analyzer.py  test_oracle.py
docs/: API_REFERENCE.md  ARCHAEOLOGIST_SKILL_SOURCE.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  OPENCLAW_INTEGRATION.md  OPENCLAW_INTEGRATION_GUIDE_SOURCE.md  USER_GUIDE.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
frontend/src/components/: AnalysisHeader.tsx  AnalysisProgress.tsx  (+10 more)
frontend/tests/: main.test.tsx
k8s/: deployment.yaml
openclaw/: openclaw.config.yaml  openclaw.example.json
scripts/: install-openclaw-skill.ps1  install-openclaw-skill.sh
(+34 files in other folders)
